head.html: Added our new analytics tag.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,15 @@
   ga('create', 'UA-84758503-1', 'auto');
   ga('send', 'pageview');
   </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTH9FRJS05"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YTH9FRJS05');
+  </script>
+  
 </head>
